Fixed issue where images were rotated on firefox in vm

--- a/homepage/good.css
+++ b/homepage/good.css
@@ -165,6 +165,7 @@ li {
     border-radius: 10px;
     border: 5px solid rgba(255, 255, 255, 0.2);
     margin: 10px;
+    image-orientation: from-image;
 }
 
 #bio {
