--- a/homepage/ugly.css
+++ b/homepage/ugly.css
@@ -158,6 +158,7 @@ li {
     border: 5px solid rgb(255, 0, 0);
     margin: 10px;
     transform: rotate(-45deg);
+    image-orientation: from-image;
 }
 
 #bio {
